--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>Enter the bill amount and cash given by the customer and know minimum number of notes to return.</h3>
         <label>
             Bill Amount:
-            <input type="text" id="bill">
+            <input type="number" id="bill">
         </label>
         <button class="next">Next</button>
         <label id="label" style="display: none;">
